--- a/styles/style.css
+++ b/styles/style.css
@@ -230,7 +230,7 @@ body, h1, h2, h3, h4, p, a {
   right:48px;
   top:50%;
   justify-self: center;
-  /* margin-right: auto;  */
+  
 }
 
 .fainman_link{
@@ -247,17 +247,64 @@ body, h1, h2, h3, h4, p, a {
 
 
 
+.kaufman{
+  position:relative;
+  overflow: hidden;
+  background-color: #1f1f1f;
+  padding-bottom: 90px;
+  
 
-
-
-
-
-
-
+}
+.table__theme_dark{
+  width: 1100px;
+}
+#digits_grid_dark{
+   row-gap: 80px; 
+   column-gap: 10px; 
+}
+.section-title__theme_dark{
+  color: white;
+  line-height: 1.15;
+  font-size:60px;
+  font-weight: 600;
+  margin-top: 90px;
+  margin-bottom: 20px;
+}
+.section-subtitle__theme_dark{
+  color: white;
+  line-height: 34px;
+  font-size:24px;
+  font-weight: normal;
+  margin-bottom: 80px;
+}
 /* и элемента с модификатором вида ключ-значение */
-.table__cell_theme_dark {
+.table_cell__theme_dark {
   width: 200px;
   color: white;
   margin-right: 0;
-  margin-top: 80px;
+  /* margin-top: 80px; */
+  width: 200px;
+  z-index:1;
+  
+}
+
+.table_heading__theme_dark{
+  line-height: 1.15;
+  font-size:24px;
+  font-weight: 600;
+  margin-bottom: 20px;
+}
+
+.table_text__theme_dark{
+  line-height: 1.2;
+  font-size:18px;
+  font-weight: normal;
+}
+.kaufman_triangle{
+  position:absolute;
+  top: 0;
+  right: -210px;
+  width: 877px;
+  height: 877px;
+   
 }
