--- a/styles/style.css
+++ b/styles/style.css
@@ -34,13 +34,19 @@ body, h1, h2, h3, h4, p, a {
 
   /* выше установили ограничения для секции */
 }
+.header_link, .fainman_link, .footer_column_link {
+  text-decoration: none;
+}
+.logo{
+  height: 32px;
+  width: 228px;
+}
 .logo_place_header{
   position:absolute;
   z-index: 1;
   left: 64px;
   top:30px;
-  height: 32px;
-  width: 228px;
+  
 }
  .header_title{
   align-self: center;
@@ -149,7 +155,7 @@ body, h1, h2, h3, h4, p, a {
 
 .section-title{
   justify-self:  center;
-  font-weight:600px;
+  font-weight:600;
   font-size: 60px;
   line-height: 1.15;
   margin-top:0;
@@ -170,6 +176,7 @@ body, h1, h2, h3, h4, p, a {
   flex-wrap:wrap;
   width: 1100px;
   margin:auto;
+ 
 }
 
  #digits_grid{
@@ -300,46 +307,45 @@ body, h1, h2, h3, h4, p, a {
   font-size:18px;
   font-weight: normal;
 }
-.kaufman_triangle{
+.kaufman_triangle {
   position:absolute;
   top: 0;
   right: -210px;
   width: 877px;
   height: 877px;
-   
 }
 
 
-.footer{
+.footer {
+  padding-top: 60px;
   background-color: #1f1f1f;
   padding-top: 60px;
-  min-height: 350px;
-  
-  
+  min-height: 250px; 
    
 }
-.footer_columns{
+.footer_columns {
   display:flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   width: 90%;
-  
-
 }
-.footer_column__content_copyright{
-  display: flex;
+.footer_column__content_copyright {
+  display: flex; 
   flex-basis: 711px;
-  
+  flex-direction: column; 
+  justify-content: space-between;
+  /* align-self: center ; */
+  margin-left: 100px;
 }
 .footer_autor{
   line-height: 25px;
   font-size:18px;
   font-weight: normal;
-  align-self: flex-end;
-  padding-top: 16px;
-  padding-bottom: 16px;
+  /* padding-top: 18px;
+  padding-bottom: 18px;  */
+
 }
 .footer_column__content_info{
-  flex-basis: 250px;
+  flex-basis: 300px;
 }
 .footer_column-heading{
   margin-bottom: 20px;
@@ -362,16 +368,15 @@ body, h1, h2, h3, h4, p, a {
   font-weight: normal;
 }
 
-
 .logo_place_footer{
-  background-image: url('../images/logo_place_footer.svg') ;
+  width: 228px;
+  height: 32px;
 }
 
 
 .footer_autor, .footer_column-heading, .footer_column_link{
   color:#f2f2f2;
 }
-
 
 .footer_social_icon{
   width: 16px;
